# Convex-Polygon-Width

./: CMakeLists.txt  Japan_BL_out.txt  README.md  coor.txt  coor2.txt  coor2_s.txt  coor_s.txt  draw.py  main.cpp  out.txt  out2.txt  out2_s.txt  out_s.txt  polygon.cpp  sphere.py
